--- a/calculator.html
+++ b/calculator.html
@@ -10,6 +10,10 @@
         var num = document.getElementById("n1");
         num.value = Math.pow(num.value, 3);
       }
+      function cuartaPotencia() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 4);
+      }
     </script>
   </head>
   <body>
@@ -18,6 +22,9 @@
     <input type="text" id="n1">
     <p>
       <button onclick="cube()"> X^3 </button>
+    </p>
+    <p>
+      <button onclick="cuartaPotencia()"> X^4 </button>
     </p>
   </body>
 </html>
